# griot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  python-wheels.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/griotql/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_griotql.py
docs/: ARCHITECTURE.md  CONTRACT-FORMAT.md  USAGE.md
examples/: column_masking.rs  contract_query.rs  dp_noise.rs  plain_sql.rs  platform_bundle.rs  row_filter.rs
fixtures/: demo_dataset_users_v1.gdcpc.signed
src/: binding.rs  catalog.rs  contract_source.rs  contract_table_provider.rs  engine.rs  lance_table.rs  lib.rs  long_running_pool_manager.rs  policy.rs  query_cache.rs  result_formatter.rs  storaged_client.rs  t05_client.rs
src/optimizer_rules/: contract_check.rs  dp_noise.rs  masking.rs  mod.rs  pipeline.rs  row_filter.rs
src/physical/: attestation_exec.rs  contract_approved_exec.rs  laplace_noise_exec.rs  masking_exec.rs  mod.rs  row_filter_exec.rs
src/platform/: bundle.rs  bundle_source.rs  mod.rs
tests/: contract_spine.rs  ddl_guard.rs  engine_shell.rs  platform_bundle.rs  seal_violation_trybuild.rs
tests/compile-fail/: seal_violation.rs  seal_violation.stderr
tests/integration/: four_rule_pipeline.rs  governed_numeric_mask.rs
tests/unit/: contract_check.rs  dp_noise.rs  masking.rs  row_filter.rs
tests/unit/wave9/: attestation_exec.rs  physical_contract_approved.rs  physical_dp_noise.rs  physical_masking.rs  physical_row_filter.rs
